--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -52,11 +52,21 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t kaleab2708/pygoat:test .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/pygoat:test .
+          docker push ${{ secrets.DOCKER_USERNAME }}/pygoat:test
 
       - name: Run Docker Scout CVE Scan
         uses: docker/scout-action@v1
         with:
           command: cves
-          image: myuser/pygoat:test
+          image: ${{ secrets.DOCKER_USERNAME }}/pygoat:test
           only-severities: critical,high
+          ignore-unfixed: true
+          format: sarif
+          output: scout-results.sarif
+
+      - name: Upload Docker Scout Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-scout-report
+          path: scout-results.sarif
