updated yml with docker

--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -63,7 +63,7 @@ jobs:
           only-severities: critical,high
           ignore-unfixed: true
           format: sarif
-          sarif: scout-results.sarif
+          sarif-file: scout-results.sarif
 
       - name: Upload Docker Scout Report
         uses: actions/upload-artifact@v4
